--- a/style.css
+++ b/style.css
@@ -149,7 +149,7 @@ img {
   text-align: start;
 }
 @media screen and (max-width: 768px) {
-  .nav_menu {
+  .nav-menu {
     position: fixed;
     top: var(--header-height);
     right: -100%;
