--- a/style.css
+++ b/style.css
@@ -26,6 +26,8 @@
   --nomral-font-size: 0.938rem;
 }
 
+
+
 /* Media Screen Min-Width : 768px */
 @media screen and (min-width: 768px) {
   :root {
@@ -33,6 +35,7 @@
     --h2-font-size: 2rem;
     --nomral-font-size: 1rem;
   }
+  
 }
 
 /* Margins */
@@ -94,6 +97,23 @@ img {
 }
 
 /* CUSTOM CSS CLASSES */
+.portfolio__item-cta {
+  display: flex;
+  gap: 1rem;
+  border: 1px solid blue;
+  margin-bottom: 1rem;
+}
+
+.banner{
+  height: 25%;
+  width: 100%;
+}
+
+#contact{
+  /* border: 1px solid blue; */
+  width: 60%;
+  margin: auto;
+}
 
 /* LAYOUT */
 .bd_grid {
@@ -149,6 +169,9 @@ img {
 .tech {
   text-align: start;
 }
+
+
+
 @media screen and (max-width: 768px) {
   .nav_menu {
     position: fixed;
@@ -163,6 +186,7 @@ img {
 
   .work_img {
     width: 125%;
+    /* height: fit-content; */
   }
   .footer {
     width: 125%;
@@ -173,7 +197,26 @@ img {
   .about_container {
     width: 120%;
   }
+  .skills__container{
+    /* border: 1px solid black; */
+    width: 150%;
+    margin: auto;
+    /* margin-left: 40%; */
+  }
+
+  .skills__img{
+    /* border: 1px solid black; */
+    width: 400%
+  }
+
+
+
+  
+  
+  
 }
+
+
 
 .nav_items {
   margin-bottom: var(--mb-4);
@@ -291,6 +334,8 @@ img {
   background: var(--gardient-color);
   border: none;
   margin-left: 2%;
+  /* margin-top: 1rem; */
+
 }
 .button1 > a {
   color: #fff;
@@ -389,6 +434,7 @@ img {
   overflow: hidden;
   transform: rotate(0deg);
   width: 50%  ;
+  margin-left: 40px;
   /* text-align: center; */
   
 }
@@ -397,35 +443,46 @@ img {
 } */
 
 /*                        ========================SKILLS */
-
-.skills__container {
+/* ===== SKILLS =====*/
+.skills__container{
   row-gap: 2rem;
-  padding-left: 28%;
-  width: 130%;
+  /* border: 1px solid blue; */
+  width: 80%;
+  display: flex;
+  margin: auto;
+  justify-content: center;
+  align-items: center;
+  /* gap: 30%; */
 }
-
-.skills__subtitle {
+.skills__subtitle{
   color: var(--first-color);
   margin-bottom: var(--mb-3);
 }
-.skills__name {
+
+.skills__name{
   display: inline-block;
-  width: 10%;
   font-size: var(--small-font-size);
   margin-right: var(--mb-2);
   margin-bottom: var(--mb-3);
-  padding: 0.25rem 0.5rem;
+  padding: .25rem .5rem;
   background-color: var(--white-color);
-  border-radius: 0.25rem;
+  border-radius: .25rem;
+  width: 10%;
 }
-.skills__name:hover {
-  /* background-color: var(--first-color); */
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+.skills__name:hover{
+  background-color: var(--first-color);
   color: var(--white-color);
 }
-.skills__img img {
-  border-radius: 0.5rem;
+.skills__img img{
+  border-radius:0.5rem;
 }
+
+
+
+
+  /* background-color: var(--first-color); */
+  /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
+
 .about__buttons {
   margin-top: 20px;
 }
@@ -512,6 +569,7 @@ img {
 .portfolio__item-cta {
   display: flex;
   gap: 1rem;
+  /* border: 1px solid blue; */
   margin-bottom: 1rem;
 }
 /* Contact */
@@ -646,7 +704,7 @@ img {
   }
 
   .contact_form {
-    width: 400px;
+    /* width: 400px; */
   }
   .contact_container {
     display: flex;
@@ -654,6 +712,9 @@ img {
   }
   .contact__info {
     margin-right: 20%;
+  }
+  .skills__box{
+    width: 100%;
   }
 }
 
@@ -665,5 +726,20 @@ img {
 
   .home_img {
     right: 10%;
+  }
+}
+
+@media screen and (min-width: 768px){
+  .skills__container{
+    grid-template-columns: repeat(2, 1fr);
+    /* width: 100%; */
+    display: flex;
+    justify-content: center;
+    /* margin-left: 10%; */
+
+    /* border: 1px solid black; */
+  }
+  .skills__name{
+    width: 10%;
   }
 }
