--- a/style.css
+++ b/style.css
@@ -214,8 +214,15 @@ img {
 
   .skills__img{
     /* border: 1px solid black; */
-    width: 400%
+    width: 400%;
+    
   }
+
+  /* .banner{
+    width: 100%;
+    height: 35%;
+
+  } */
 
 
 
@@ -743,6 +750,7 @@ img {
     /* width: 100%; */
     display: flex;
     justify-content: center;
+    
     /* margin-left: 10%; */
 
     /* border: 1px solid black; */
@@ -750,4 +758,5 @@ img {
   .skills__name{
     width: 10%;
   }
+ 
 }
